feat: CDN deployment foundation
Complete Cloudflare CDN deployment system with KV storage integration, configuration management, and validation. Built on proven MVP foundation to enable automated deployment of generated JavaScript modules to global CDN.

- **src/deployer.js**: Core CDN deployment functionality with Cloudflare KV API integration
- **cloudflare/config.json**: Environment-specific configuration for development/production
- **cloudflare/deploy.js**: CLI deployment tool with validation and testing capabilities
- **.env.example**: Environment variables template for setup
- **Enhanced package.json**: Added deployment scripts and CDN dependencies

- Deploy single or multiple files to Cloudflare CDN
- Environment-specific configuration (development/production)
- Comprehensive error handling and validation
- CDN accessibility testing
- Configuration validation commands

- `npm run validate:config` - Validate deployment configuration
- `npm run deploy` - Deploy to development environment
- `npm run deploy:prod` - Deploy to production environment

Ready for GitHub Actions workflow integration to automate the complete API → CDN pipeline.

Implemented Phase 1 Commit 1: CDN Deployment Foundation as defined in developer.md. Built complete Cloudflare integration with KV storage, configuration management, and validation system to enable automated deployment of generated JavaScript modules to global CDN infrastructure.

--- a/api-to-cdn-sync/src/package.json
+++ b/api-to-cdn-sync/src/package.json
@@ -4,13 +4,23 @@
   "description": "API to CDN sync application",
   "main": "main.js",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "cloudflare": "^3.3.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "jest",
-    "sync": "node main.js"
+    "test": "jest ../test",
+    "sync": "node main.js",
+    "deploy": "node ../cloudflare/deploy.js deploy",
+    "deploy:prod": "node ../cloudflare/deploy.js deploy production",
+    "validate:config": "node ../cloudflare/deploy.js validate"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/../test"],
+    "testMatch": ["**/*.test.js"]
   }
 }
